# novel-craft

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  deny.toml  package.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_note.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
assets/readme/: PROVENANCE.md
docs/: cli-reference.md  general-writing-engine.md  github-settings.md  npm-install.md  npm-publish.md  release-process.md  skill-guide.md  source-policy.md
evals/fixtures/: continuity_eye_colour.md  dialogue_as_you_know.md  dialogue_on_the_nose.md  exposition_opening.md  filter_words.md  manifest.yml  passive_action.md  passive_withholding.md  progression_gap.md  promise_payoff.md  repeated_gestures.md  serial_mobile_paragraph.md  show_tell_emotion.md
references/: craft-rulebook.md  creative-generation-guide.md  fiction-engineering-workflow.md  implementation-roadmap.md  prd.md  sds.md  serial-success-patterns.md  source-policy.md  writing-craft-engine.md
rules/: default.yml
skills/novel-character-review/: SKILL.md
skills/novel-continuity-sync/: SKILL.md
skills/novel-craft-agentic-writer/: SKILL.md
skills/novel-craft-book-audit/: SKILL.md
skills/novel-craft-character-review/: SKILL.md
skills/novel-craft-continuity-sync/: SKILL.md
skills/novel-craft-creativity-engine/: SKILL.md
src/: lib.rs
tests/: rust_cli.rs
(+29 files in other folders)
